# PD26.1-TB2

./: .env  .gitignore  Dockerfile  README.md  divisao_tarefas.txt  docker-compose.yml  gestao_hospitalar.db  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 62a1cbe80c13_criacao_inicial.py  87627ab512c3_add_internacao_e_paciente.py  de20397ee083_add_entity_document.py  e107b052aff6_add_medico_id_e_diagnostico_na_consulta.py  f286611dd47d_merge_heads.py
app/: gestao_hospitalar.db  main.py  pyproject.toml
app/core/: config.py  exceptions.py
app/db/: database.py  db.py
app/models/: __init__.py  consulta.py  document.py  documento.py  especialidade.py  exame.py  internacao.py  medico.py  paciente.py
app/routers/: consulta_router.py  document_router.py  documento_router.py  especialidade_router.py  exame_router.py  hasher.py  internacao_router.py  medicos.py  paciente_router.py
app/schemas/: consulta_schema.py  document_schema.py  documento_schema.py  especialidade_schema.py  exame_schema.py  internacao_schema.py  medico_schema.py  paciente_schema.py
scripts/: carga_inicial_t2.py  carga_inicial_tp2.py
