[project]
name = "app"
version = "0.1.0"
description = "Gestão Hospitalar API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "pydantic>=2.7.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.29",
    "alembic>=1.13.1",
    "fastapi-pagination>=0.12.24",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.22.1",
    "email-validator>=2.3.0",
]
