[project]
name = "gestao-hospitalar"
version = "0.1.0"
description = "API de Gestão Hospitalar com FastAPI, MongoDB e MinIO"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie>=2.0.1",
    "fastapi[standard]>=0.128.0",
    "fastapi-pagination>=0.15.12",
    "aioboto3>=13.0.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "faker>=40.12.0",
    "python-multipart>=0.0.28",
]
 