[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "deltalake>=1.5.0",
    "faker>=40.12.0",
    "fastapi>=0.135.2",
    "fastapi-pagination>=0.15.12",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.42.0",
    "zipstream-ng>=1.9.0",
]
